fix banner title on mobile

--- a/scss/NewsDev.scss
+++ b/scss/NewsDev.scss
@@ -10,6 +10,7 @@
 
     .timeline {
         ul {
+            margin-bottom: 45px;
             li {
                 list-style-type: none;
                 position: relative;
