--- a/scss/components/Banner.scss
+++ b/scss/components/Banner.scss
@@ -3,13 +3,16 @@
 		font-family: 'Kashima';
         color: white;
         font-weight: bold;
-        font-size: 100px;
+        font-size: 60px;
         text-align: center;
         text-shadow: black 4px 3px;
-        margin-top: 35%;
-        text-transform: uppercase;
+        margin-top: 45%;
+		text-transform: uppercase;
+		@media screen and (max-width: $md) {
+			font-size: 80px;
+        }
         @media screen and (min-width: $md) and (max-width: $lg) {
-            margin-top: 20%;
+			margin-top: 20%;
         }
         @media screen and (min-width: $lg) and (max-width: $xlg) {
             margin-top: 15%;
